Readme with User Stories

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -3,14 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 2 Homepage</title>
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/app.css" />
+    <title>Cooking Preparations</title>
   </head>
-  <body>
-    <h1>Welcome to Project 2</h1>
-    <nav>
-      <a href="/auth/signup">Sign Up</a>
-      <a href="/auth/login">Log In</a>
-      <a href="/auth/logout">Log Out</a>
-    </nav>
+  <body class="boLogin">
+    <div class="main">
+     <div class="divs" id="headDiv">
+        <h1 class="header">Cooking Preparations</h1>
+     </div>
+     <div class="divs" id="centraldiv">
+        <nav class="tagsCont">
+            <div class="tags"><a href="/auth/signup">Sign Up</a></div>
+            <div class="tags"><a href="/auth/login">Log In</a></div>
+            <div class="tags"><a href="/auth/logout">Log Out</a></div>
+        </nav>
+     </div>
+      <div class="divs" id="goodbye">
+           <p>Thanks for checking our website :)</p>
+      </div>
+    </div>
   </body>
 </html>
