--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,19 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
+    <title>Cooking Preparations</title>
     <link rel="stylesheet" href="/css/app.css" />
   </head>
 
-  <body>
-    <h1>Login</h1>
-
-    <form action="/auth/login" method="POST">
-      Username: <input type="text" name="username" /> <br />
-      <br />
-      Password: <input type="text" name="password" /><br />
-      <br />
-      <input type="submit" value="Login" />
-    </form>
+  <body class="boLogin">
+    <div class="main">
+      <div class="divs" id="headDiv">
+        <h1 class="header">Cooking Preparations</h1>
+        <h1 class="header2">Login</h1>
+      </div>
+      <div class="divs" id="centraldiv">
+        <form action="/auth/login" method="POST">
+           Username: <input type="text" name="username" /> <br />
+          <br />
+           Password: <input type="text" name="password" /><br />
+          <br />
+          <input type="submit" value="Login" />
+        </form>
+      </div>
+      <div class="divs" id="goodbye">
+        <p>Thanks for checking our website :)</p>
+      </div>
+    </div>
   </body>
 </html>
