--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -12,6 +12,7 @@
     <div class="main">
      <div class="divs" id="headDiv">
         <h1 class="header">Cooking Preparations</h1>
+        <h5 class="welmes">This site was created to help people to plan their recipes and help them with the preparation.</h5>
      </div>
      <div class="divs" id="centraldiv">
         <nav class="tagsCont">
