--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -16,7 +16,7 @@
         <h5 class="welmes">This site was created to help people to plan their recipes and help them with the preparation.</h5>
         <h1 class="header2">Login</h1>
       </div>
-      <div class="divs" id="centraldiv">
+      <div class="divs" id="centraldivcenter">
         <div class="fSet">
           <form action="/auth/login" method="POST">
             <label class="etiquetas" for="name">Username:</label>
