--- a/views/users/notfound.ejs
+++ b/views/users/notfound.ejs
@@ -14,7 +14,7 @@
         <h1 class="header">Cooking Preparations</h1>
         <h5 class="welmes">This site was created to help people to plan their recipes and help them with the preparation.</h5>
      </div>
-     <div class="divs" id="centraldiv">
+     <div class="divs" id="centraldivcenter">
         <nav class="notfoundTag">
             <h1 class="notfound">User not found.</h1>
             <br\>
