--- a/views/editRecipe.ejs
+++ b/views/editRecipe.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/css/app.css" />
     <title>Cooking Preparations</title>
   </head>
-  <body class="boLogin">
-      <form action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=PUT" method="POST">
+  <body class="boRecipe">
+      <form action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=PUT" method="POST" >
           <div class="setReceta">
             <div class=recItem>
             <label class="lRecipe" for="name">Name:</label>
@@ -25,11 +25,11 @@
             <input class="fRecipe" type="text" id="prepTime" name="prepTime" value="<%=recipe.prepTime%>"/>
             </div>
             <div class=recItem>
-              <input id="butt" class="fRecipe" type="submit" name="" value="Submit Changes" />
+              <input class="fRecipe" type="submit" name="" value="Submit Changes" />
             </div>
           </div>
       </form>
-      <form action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=DELETE" method="POST">
+      <form action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=DELETE" method="POST" >
         <input class="fRecipe" type="submit" value="DELETE"/>
       </form>
   </body>
