--- a/views/editstep.ejs
+++ b/views/editstep.ejs
@@ -10,27 +10,21 @@
     <title>Cooking Preparations</title>
   </head>
   <body class="boLogin">
-      <form action="/step/<%=user.id;%>/edit/<%=recipe.id%>?_method=PUT" method="POST">
+      <form action="/step/<%=recipe.id%>/<%=step.id%>?_method=PUT" method="POST">
           <div class="setReceta">
             <div class=recItem>
-            <label class="lRecipe" for="name">Name:</label>
-            <input class="fRecipe" type="text" id="name" name="name" value="<%=recipe.name%>" />
+              <input class="fRecipe" type="hidden"  id="recipeId" name="recipeId" value="<%=recipe.id%>" />
             </div>
             <div class=recItem>
-            <label class="lRecipe" for="quantity">Quantity:</label>
-            <input class="fRecipe" type="text" id="quantity" name="quantity"  value="<%=recipe.dificulty%>" /> 
-            </div>
-            <div class=recItem>
-            <label class="lRecipe" for="unit">Unit of Mesasure:</label>
-            <input class="fRecipe" type="text" id="unit" name="unit" value="<%=recipe.prepTime%>"/>
+            <label class="lRecipe" for="description">Description:</label>
+            <textarea class="fRecipe" id="description" name="description" rows="3" cols="100">
+              <%=step.description%>
+            </textarea>
             </div>
             <div class=recItem>
             <input id="butt" class="fRecipe" type="submit" name="" value="Submit Changes" />
           </div>
         </div>
-      </form>
-      <form action="/step/<%=user.id; %>/edit/<%=recipe.id%>?_method=DELETE" method="POST">
-        <input class="fRecipe" type="submit" value="DELETE"/>
       </form>
   </body>
 </html>
